samples/_failures_safe/1761415025_0e9611_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_87e3b13f.c: In function ‘main’:
./samples/SAFE/__tmp_87e3b13f.c:154:5: error: expected declaration or statement at end of input
  154 |     char input[256];
      |     ^~~~
